--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - name: checkshit
-      run: ls -la
+      run: sudo apt-get update && sudo apt-get install -y mingw-w64
     - uses: actions/checkout@v4
     - name: make
       run: make
