--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,7 +18,7 @@ jobs:
     - name: make
       run: make
     - name: make check
-      run: ls -la
+      run: cd build && ls -la
     - name: Upload executable
       uses: actions/upload-artifact@v4.6.2
       with:
